Lab 1/lab1-test-dir#/Calc/Par.y
-- This Happy file was machine-generated by the BNF converter
{
{-# OPTIONS_GHC -fno-warn-incomplete-patterns -fno-warn-overlapping-patterns #-}
module Calc.Par where
import qualified Calc.Abs
import Calc.Lex
}

%name pProgram Program
%name pExp1 Exp1
%name pExp2 Exp2
%name pProgram1 Program1
%name pProgram2 Program2
-- no lexer declaration
%monad { Either String } { (>>=) } { return }
%tokentype {Token}
%token
  '(' { PT _ (TS _ 1) }
  ')' { PT _ (TS _ 2) }
  '*' { PT _ (TS _ 3) }
  '+' { PT _ (TS _ 4) }
  '-' { PT _ (TS _ 5) }
  '/' { PT _ (TS _ 6) }
  L_integ  { PT _ (TI $$) }

%%

Integer :: { Integer }
Integer  : L_integ  { (read ($1)) :: Integer }

Program :: { Calc.Abs.Program }
Program : Program '+' Exp1 { Calc.Abs.EAdd $1 $3 }
        | Program '-' Exp1 { Calc.Abs.ESub $1 $3 }
        | Program1 { $1 }

Exp1 :: { Calc.Abs.Exp }
Exp1 : Exp1 '*' Exp2 { Calc.Abs.EMul $1 $3 }
     | Exp1 '/' Exp2 { Calc.Abs.EDiv $1 $3 }

Exp2 :: { Calc.Abs.Exp }
Exp2 : Integer { Calc.Abs.EInt $1 }

Program1 :: { Calc.Abs.Program }
Program1 : Program2 { $1 }

Program2 :: { Calc.Abs.Program }
Program2 : '(' Program ')' { $2 }
{

happyError :: [Token] -> Either String a
happyError ts = Left $
  "syntax error at " ++ tokenPos ts ++
  case ts of
    []      -> []
    [Err _] -> " due to lexer error"
    t:_     -> " before `" ++ (prToken t) ++ "'"

myLexer = tokens
}
